	- [roms]  $2417: allow to directly load ROM/TIB/SAV files from command line; maintained compatibility with older switches
	- [roms]  $2420: fixed bug introduced in $2417
	- [roms]  $2421: fixed double-free when DnD files to send
	- [kevin] $2422: fixed errors (wrong case) in ROM_CALL list and added 2 new entries from TIGCC
	- [kevin] $2424: don't disassemble instructions invalid for the 68000

- ??/??/2007, version 2.81e
	- [kevin] $2348: delete the temporary file instead of erroring if the user cancels the receive file dialog
	- [kevin] $2349: fixed progress bar refresh referencing freed memory (#1529247)
	- [roms]  $2350: send a group file as group, not as backup (bug #1529247)
	- [kevin] $2356: imported Insight 6.6 and merged TiEmu changes
	- [kevin] $2360: regenerated oleaut_i.c with WIDL again, this time fixing the include directives so it actually
	                 compiles
	- [roms]  $2363: added and enabled i18n support
	- [roms]  $2368: replaced unused/deprecated printl system by GLib logging functions (part 1/2)
	- [roms]  $2372: replaced any occurence of printl by a tiemu_warning() call (part 2/2)

- 11/12/2006, version 2.81d
	- [roms]  $2321: store *.sav files in the images folder rather than polluting the application top folder
	- [roms]  $2322: updated to use API changes of tifiles2 v1.0.3 
	- [kevin] $2335: fixed the Tcl/Tk code in Insight so it can be debugged with the TclPro debugger
	- [kevin] $2337: add xdg-open in front of the list of browsers

- 07/08/2006, version 2.81c
	- [kevin] $2202: fixed g_free of invalid pointers in state.c (#1471709)
	- [kevin] $2203: fixed ticalcs_cable_detach of NULL calc_handle when exiting TiEmu early (reported by hypersonic)
	- [kevin] $2211: imported Insight 6.5 and intl directory from Binutils 2.17 and merged TiEmu changes
	                 quote file name for add_symbol_file properly for the new add_symbol_file command parser in GDB 6.5